feat: [NUTR-50] - increase route to find planning meal by patient id
